fix righ-side menu spacing of profile-detailed-info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,7 @@
   left: 250px;
   top: 0;
   right: 0;
-  height: 100px;
+  height: 80px;
   z-index: $zindex-fixed;
 }
 
@@ -75,17 +75,18 @@
 */
 
 .right-side-nav {
-  top: 100px;
+  top: 80px;
   right: 0;
   bottom: 0;
   width: 280px;
+  border-color: $dark-gray;
 }
 
 // HOMEPAGE-RIGHT-SIDE-NAV
 
 .who-to-follow-module-title,
 .followed-by-module-title  {
-  height: 100px;
+  height: 80px;
 }
 
 // USERPAGE-RIGHT-SIDE-NAV
@@ -96,11 +97,25 @@
 }
 
 .fa-list-ul {
-  font-size: 1.4rem;
+  font-size: 2.1rem;
 }
 
-.profile-info-fullname {
+.profile-info-fullname,
+.user-stats-total {
   font-size: 1.3rem;
+  color: $header-gray;
+}
+
+.profile-info-stats {
+  height: 80px;
+}
+
+.user-stats-box {
+  flex-basis: calc(280px/3);
+}
+
+.follower-fullname {
+  font-size: 0.8rem;
   color: $header-gray;
 }
 
