--- a/app/assets/stylesheets/opinions.scss
+++ b/app/assets/stylesheets/opinions.scss
@@ -4,13 +4,13 @@
 .opinions-index-container,
 .user-page-container {
   left: 250px;
-  top: 100px;
+  top: 80px;
   right: 280px;
 }
 
 .opinions-index-nav,
 .user-page-nav {
-  height: 100px;
+  height: 80px;
 }
 
 .create-new-opinion,
