--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -47,7 +47,7 @@ div.actions {
 }
 
 #notice {
-  color: green;
+  color: $header-gray;
 }
 
 .field_with_errors {
