--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,13 +3,13 @@
 
 .user-page-container {
   left: 250px;
-  top: 100px;
+  top: 80px;
   right: 250px;
 }
 
 .opinions-index-nav,
 .user-page-nav {
-  height: 100px;
+  height: 80px;
 }
 
 .create-new-opinion,
